# agentbox

./: .gitignore  Cargo.nix  Cargo.toml  README.md  build.rs  flake.nix
examples/: bouncing.rs  inverted_double_pendulum.rs  simple.rs  toggle_visible.rs
src/: common.rs  lib.rs  main.rs  model.rs  physics.rs  run.rs  solid.rs  solid_primitives.rs
src/models/: bouncing_balls.rs  inverted_double_pendulum.rs  mod.rs  simple.rs
src/physics/: mod.rs
src/shaders/: background.glsl  common.glsl  geometry.glsl  solids.frag  wholecanvas.vert
src/simulation/: mod.rs
src/visual/: aabb_tree.rs  bounding_ball_tree.rs  camera.rs  graphics.rs  mod.rs  solids_renderer.rs
src/visual/camera/: aircraft.rs  fps.rs  mod.rs
