[package]
name = "combat"
version = "0.1.0"
authors = ["Loke Gustafsson <lokegustafsson@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = "1.7"
bytemuck = "1.4"
cgmath = "0.17"
getset = "0.1"
log = "0.4"
rand = "0.7"
wgpu = "0.6"
winit = "0.23"

[build-dependencies]
anyhow = "1.0"
async-std = "1.7"
glob = "0.3"
md5 = "0.7"
shaderc = "0.6"

[dev-dependencies]
env_logger = "0.8"
