[package]
name = "agentbox"
version = "0.1.0"
authors = ["Loke Gustafsson <lokegustafsson@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = "1.7"
bytemuck = "1.4"
cgmath = "0.18"
getset = "0.1"
log = "0.4"
wgpu = "0.7"
winit = "0.24"

[build-dependencies]
anyhow = "1.0"
async-std = "1.7"
glob = "0.3"
md5 = "0.7"
shaderc = "0.7"

[dev-dependencies]
env_logger = "0.8"
