[package]
name = "agentbox"
version = "0.1.0"
authors = ["Loke Gustafsson <lokegustafsson@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = "1.7"
bytemuck = "1.4"
cgmath = "0.18"
env_logger = "0.8"
fastrand = "1.4"
log = "0.4"
wgpu = { version = "0.14", features = ["spirv"] }
winit = "0.27"

[build-dependencies]
anyhow = "1.0"
async-std = "1.7"
glob = "0.3"
md5 = "0.7"
shaderc = "0.7"

[dev-dependencies]
env_logger = "0.8"
